[tool.poetry]
name = "pytimer"
version = "0.1.0"
description = "CLI tool to build systemd timers quickly and efficiently."
authors = ["Steven Wills"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
